christmas-shop/style.css
/* ... */
.hero__content {
  width: 426px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

/* расстояния внутри HERO */
.hero__content > * + * {
  margin-top: 12px;
}

.hero__title {
  font-size: 32px;
  font-weight: 600;
  letter-spacing: 0.18em;
  color: #FFFFFF;
  text-transform: uppercase;
}

.hero__caption {
  font-family: 'Allura', cursive;
  font-size: 24px;
  color: #FFFFFF;
}

.br-mobile {
  display: none;
}

.br-desktop, .br-all {
  display: inline;
}

/* ABOUT */
.about {
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  min-height: 648px;
  background-color: #FF4646;
  background-image: url('assets/images/about-bg.png');
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.about__white-card {
  width: 1276px;
  height: 528px;
  background-color: #FFFFFF;
  border-radius: 20px;
  display: flex;
  overflow: hidden;
}

.about__content {
  width: 426px;
  height: 328px;
  margin: auto 0 auto 60px;
  display: flex;
  flex-direction: column;
}

.about__caption {
  font-family: 'Allura', cursive;
  font-size: 24px;
  line-height: 1;
  letter-spacing: 0.05em;
  color: #FF4646;
  margin-top: 60px;
  margin-bottom: 20px;
}

.about__title {
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  line-height: 1.52;
  letter-spacing: 0.16em;
  color: #181C29;
  text-transform: uppercase;
  margin-bottom: 20px;
}

.about__text {
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  line-height: 1.48;
  letter-spacing: 0;
  color: #181C29;
  margin-bottom: 60px;
}

.about__image {
  width: 638px;
  height: 528px;
  margin-left: auto;
}

.about__image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* БЛОК СЛАЙДЕР */
.slider {
  max-width: 1440px;
  width: 100%;
  height: 488px;
  margin: 0 auto;
  background-color: #FF4646;
  background-image: url('assets/images/bg-slider-ball.png');
  background-size: cover;
  background-position: center;
  overflow: hidden;
  padding-top: 60px;
}

.slider__header {
  width: 426px;
  height: 72px;
  margin: 0 auto 20px;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.slider__caption {
  font-family: 'Allura', cursive;
  font-size: 24px;
  color: #FFFFFF;
  letter-spacing: 0.05em;
}

.slider__title {
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.52;
  color: #FFFFFF;
  text-transform: uppercase;
  letter-spacing: 0.16em;
}

/* Окно ленты */
.slider__window {
  width: 100%;
  height: 200px;
  margin-bottom: 20px;
  position: relative;
}

/* Сама лента */
.slider__track {
  display: flex;
  align-items: center;
  gap: 20px;
  width: 1993px;
  position: absolute;
  left: 82px;
  transition: transform 0.5s ease;
}

.slider__item-text {
  font-family: 'Montserrat', sans-serif;
  font-size: 80px;
  font-weight: 600;
  color: #FFFFFF;
  text-transform: uppercase;
}

.slider__item-img {
  width: 200px;
  height: 200px;
  flex-shrink: 0;
}

.slider__item-img img {
  width: 100%;
  height: 100%;
  border-radius: 20px;
  object-fit: cover;
}

/* КНОПКИ */
.slider__controls {
  width: 1276px;
  height: 56px;
  margin: 0 auto;
  display: flex;
  justify-content: flex-end;
}

.slider__buttons {
  display: flex;
  gap: 20px;
}

.slider__btn {
  width: 56px;
  height: 56px;
  border-radius: 20px;
  background-color: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: 0.3s;
}

/* ЛЕВАЯ КНОПКА */
.btn-left {
  border: 1px solid rgba(255, 255, 255, 0.4);
  color: rgba(255, 255, 255, 0.4);
}

/* ПРАВАЯ КНОПКА */
.btn-right {
  border: 1px solid #FFFFFF;
  color: #FFFFFF;
}

/* ПОВЕДЕНИЕ КНОПОК */
.slider__btn:hover {
  background-color: #FFFFFF;
  color: #FF4646;
}

/* БЛОК CTA */
.cta {
  max-width: 1440px;
  width: 100%;
  height: 668px;
  margin: 0 auto;
  background-color: #FF4646;
  background-image: url('assets/images/cta-bg-1.png'), url('assets/images/cta-bg-2.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 0 20px 20px;
  overflow: hidden;
}

.cta__container {
  width: 426px;
  height: 428px;
  margin: 0 auto;
  padding: 60px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: center;
}

.cta__title {
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  line-height: 1.52;
  color: #FFFFFF;
  text-transform: uppercase;
  letter-spacing: 0.16em;
}

/* КНОПКА CTA */
.cta__btn {
  width: 235px;
  height: 56px;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #181C29;
  color: #FFFFFF;
  font-size: 12px;
  line-height: 1.3;
  letter-spacing: 0.05em;
  border-radius: 20px;
  transition: 0.3s;
  text-decoration: none;
}

.cta__btn:hover {
  background-color: #FFFFFF;
  color: #181C29;
}

.cta__timer-wrapper {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.cta__caption {
  font-family: 'Allura', cursive;
  font-size: 24px;
  line-height: 1;
  color: #FFFFFF;
  letter-spacing: 0.05em;
}

/* ТАЙМЕР, ну у меня не активный, эх */
.timer {
  width: 344px;
  height: 72px;
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.timer__item {
  width: 80px;
  height: 52px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.timer__num {
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  font-weight: 600;
  color: #FFFFFF;
}

.timer__text {
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  color: #FFFFFF;
  text-transform: uppercase;
}

.timer__divider {
  width: 1px;
  height: 20px;
  background-color: rgba(255, 255, 255, 0.4);
}
/* ... */

